# curry_renderer

./: .gitignore  Cargo.toml  README.md  curry_renderer_app-5f9733ca348a5be4.js  curry_renderer_app-5f9733ca348a5be4_bg.wasm  index.html
.github/workflows/: pages.yml  rust.yml
apps/box_3d/: Cargo.toml
apps/box_3d/src/: app.rs
apps/main/: Cargo.toml
apps/main/src/: app.rs  main.rs  main_app.rs
apps/main/src/app/: triangle2d.rs  triangle3d.rs
apps/triangles_2d/: Cargo.toml
apps/triangles_2d/benches/: cpu_renderer.rs
apps/triangles_2d/src/: app.rs  main.rs
benches/: cpu_renderer.rs
renderer/: Cargo.toml
renderer/benches/: cpu_renderer.rs
renderer/src/: editor.rs  lib.rs  math.rs  renderer.rs
renderer/src/editor/: minimap.rs  triangle2d.rs  triangle3d.rs  vec3.rs
renderer/src/extensions/: as_egui_pos2.rs  as_egui_vec2.rs  as_uvec2.rs
renderer/src/math/: box2d.rs  box3d.rs  rect.rs  triangle.rs  triangle2d.rs  triangle3d.rs
renderer/src/renderer/: cpu.rs  render_target.rs
renderer/src/renderer/cpu/: render_target.rs
src/: app.rs  editor.rs  extensions.rs  lib.rs  main.rs  main_app.rs  math.rs  renderer.rs
src/app/: triangle2d.rs  triangle3d.rs
src/editor/: minimap.rs  triangle.rs  vec2.rs  viewport.rs
src/extensions/: as_array.rs  as_egui_color32.rs  as_egui_pos2.rs  as_egui_vec2.rs  as_vec2.rs  as_vec3.rs
src/math/: overlap_area.rs  rect.rs  triangle.rs
src/renderer/: antialiasing.rs  cpu.rs  frame_buffer.rs  render_target.rs  texture.rs
src/renderer/cpu/: frame_buffer.rs  render_target.rs
