[workspace]
members = ["apps/*", "renderer"]
resolver = "2"

[workspace.dependencies]
curry_renderer = { path = "renderer" }

web-time = "0.2.3"
glam = "0.24.2"
uuid = { version = "1.5.0" }
egui = "0.23.0"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
