[package]
name = "curry_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { workspace = true, features = ["v4"] }
glam = { workspace = true }
web-time = { workspace = true }
egui = { workspace = true }